# varar

./: .gitignore  .jscpd.json  .tool-versions  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IDEA.md  LICENSE  Makefile  README.md  TODO.md  biome.json  cliff.toml  coverage.json  knip.json  languages.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json5  rustfmt.toml  tsconfig.base.json  tsconfig.tests.json  var.config.json  var.config.ts  varar.config.json  vitest.config.ts  vitest.plugins.ts  vitest.workspace.ts
.github/workflows/: dotnet.yml  go.yml  java.yml  lint-commits.yml  python.yml  ruby.yml  rust.yml  typescript.yml  website.yml
conformance/: package.json
conformance/config/: README.md  (+1 more)
doc/: ARCHITECTURE.md  RELEASING.md  RENAME-VARAR.md  agent-friendly-docs.md  website-versioning.md
docs/: RELEASING.md
dotnet/: .gitignore  .tool-versions  Directory.Build.props  README.md  Varar.sln
examples/: .rubocop.yml  .tool-versions  README.md
examples/python-pytest/: .gitignore  README.md  pyproject.toml  tables-and-docstrings.md
examples/python-pytest/steps/: deep_thought.steps.py  hello_var.steps.py  library.steps.py  roman_numerals.steps.py  tables_and_docstrings.steps.py  yahtzee.steps.py
examples/python-pytest/tests/varar/: hello_var.steps.py  yahtzee.steps.py
examples/python-unittest/: .gitignore  README.md  pyproject.toml  test_var.py  test_varar.py  var.config.json  var.lock.json  varar.config.json  varar.lock.json
examples/python-unittest/src/library_example/: __init__.py
examples/python-unittest/src/roman_numerals_example/: __init__.py
examples/python-unittest/src/yahtzee_example/: __init__.py
examples/python-unittest/steps/: deep_thought.steps.py  library.steps.py  roman_numerals.steps.py  tables_and_docstrings.steps.py  yahtzee.steps.py
examples/python-unittest/tests/varar/: library.steps.py
examples/rust-cargotest/: Cargo.toml  README.md  deep-thought.md  hello-var.md  rust-toolchain.toml  var.config.json  varar.config.json  varar.lock.json
examples/rust-cargotest/src/: lib.rs  library.rs  library_example.rs  roman_numerals.rs  roman_numerals_example.rs  yahtzee_example.rs
examples/rust-cargotest/src/steps/: deep_thought.rs  deep_thought.steps.rs  hello_var.rs  hello_var.steps.rs  library.rs  library.steps.rs  mod.rs  roman_numerals.rs  roman_numerals.steps.rs  tables_and_docstrings.rs  tables_and_docstrings.steps.rs  yahtzee.rs
examples/rust-cargotest/src/varar/: deep_thought.steps.rs  hello_var.steps.rs  library.steps.rs  mod.rs  roman_numerals.steps.rs  tables_and_docstrings.steps.rs  yahtzee.steps.rs
examples/rust-cargotest/tests/: specs.rs  unit.rs  varar.rs
examples/rust-cargotest/varar/: library.md
go/: go.mod  go.sum
java/: pom.xml
python/: README.md  pyproject.toml  varar.config.json
python/examples-pytest/: README.md  pyproject.toml  var.config.json
python/examples-pytest/steps/: hello_var.steps.py  tables_and_docstrings.steps.py
release/: bump-java-snapshot.sh  changelog.sh  lib.sh  lint-commits.sh  prepare.sh  release.env  release.sh  stamp.sh  stamp_python.py  website-ensure-base.mjs  website-index.mjs  website-rebase-links.mjs  website-snapshot.sh
ruby/: .gitignore  .rubocop.yml  Gemfile  Rakefile
rust/: Cargo.toml  rust-toolchain.toml
rust/cargotest/: Cargo.toml
rust/cargotest/src/: lib.rs
rust/cargotest/tests/: adapter.rs
rust/config/: Cargo.toml
rust/config/src/: lib.rs
rust/config/tests/: conformance.rs
rust/core/: Cargo.toml
rust/core/src/: ast.rs  cell_diff.rs  conformance.rs  diagnostics.rs  doc_string_diff.rs  drift.rs  error.rs  execute.rs  expression.rs  failure.rs  failure_anchor.rs  handler.rs  hash.rs  lib.rs  param_diff.rs  plan.rs  registry.rs  result.rs  scanner.rs  sentences.rs  span.rs  structurer.rs  table_cells.rs
rust/core/tests/: ast_test.rs  canonical_json_test.rs  cell_diff_test.rs  conformance_test.rs  diagnostics_test.rs  doc_string_diff_test.rs  drift_test.rs  execute_test.rs  failure_test.rs  hash_test.rs  matcher_test.rs  offsets_test.rs  param_diff_test.rs  parse_test.rs  plan_test.rs  registry_test.rs  scanner_test.rs  sentences_test.rs  smoke_test.rs  span_test.rs  step_role_test.rs  structurer_test.rs  table_cells_test.rs
rust/core/tests/common/: mod.rs
rust/runner/: Cargo.toml
rust/runner/src/: baseline_store.rs  discovery.rs  lib.rs  render.rs  run.rs
rust/runner/tests/: runner.rs
rust/var-cargotest/src/: lib.rs
rust/var-cargotest/tests/: adapter.rs
rust/var-config/: Cargo.toml
rust/var-core/: Cargo.toml
rust/var-core/src/: canonical_json.rs  drift.rs  error.rs  execute.rs  expression.rs  handler.rs  hash.rs  lib.rs  matcher.rs  offsets.rs  param_diff.rs  result.rs  scanner.rs  structurer.rs  table_cells.rs  value.rs
rust/var-core/tests/: canonical_json_test.rs  conformance_test.rs  diagnostics_test.rs  doc_string_diff_test.rs  execute_test.rs  failure_test.rs  matcher_test.rs  param_diff_test.rs  parse_test.rs  plan_test.rs  registry_test.rs
rust/var-core/tests/common/: mod.rs
rust/var-runner/: Cargo.toml
rust/var-runner/src/: discovery.rs  run.rs
rust/var/src/: lib.rs  steps.rs
rust/varar/: Cargo.toml
rust/varar-cargotest/: Cargo.toml
rust/varar-config/src/: lib.rs
rust/varar-config/tests/: conformance.rs
rust/varar-core/src/: canonical_json.rs  lib.rs  parse.rs  scanner.rs  span.rs  step_kind.rs  step_role.rs
rust/varar-core/tests/: ast_test.rs  cell_diff_test.rs  drift_test.rs  hash_test.rs  offsets_test.rs  scanner_test.rs  sentences_test.rs  span_test.rs  step_role_test.rs  structurer_test.rs  table_cells_test.rs
rust/varar-runner/src/: baseline_store.rs  lib.rs  render.rs
rust/varar-runner/tests/: runner.rs
rust/varar/src/: lib.rs  steps.rs  value_conv.rs
rust/varar/tests/: conformance.rs
scripts/: coverage-summary.sh  install-toolchains.sh  install-vscode.mjs
typescript/: .jscpd.json  .npmrc  biome.json  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.tests.json  var.config.json  var.config.ts  vitest.config.ts  vitest.plugins.ts
(+1111 files in other folders)
