[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "var-example-python-pytest"
version = "0.0.1"
description = "Standalone sample: run Markdown specs as pytest tests with Vár"
requires-python = ">=3.12"
dependencies = ["pytest>=8", "pytest-var"]

# In this monorepo the Vár packages resolve from source (editable path
# sources), so the sample gates trunk against the local build. The release
# sync to oselvar/var-examples deletes this whole table and pins the released
# PyPI version — the plain dependency above is all a real project needs. The
# transitive set is listed because pytest-var pins its internal dependencies
# exactly (==<version>).
[tool.uv.sources]
pytest-var = { path = "../../python/packages/var-pytest", editable = true }
oselvar-var = { path = "../../python/packages/var", editable = true }
oselvar-var-core = { path = "../../python/packages/var-core", editable = true }
oselvar-var-config = { path = "../../python/packages/var-config", editable = true }
oselvar-var-runner = { path = "../../python/packages/var-runner", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/roman_numerals_example", "src/yahtzee_example"]

[tool.pytest.ini_options]
addopts = "--rootdir=."
testpaths = ["."]
