[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "var-example-python-pytest"
version = "0.0.1"
description = "Standalone sample: run Markdown specs as pytest tests with Vár"
requires-python = ">=3.12"
dependencies = ["pytest>=8", "pytest-varar"]

# In this monorepo the Vár packages resolve from source (editable path
# sources), so the sample gates trunk against the local build. The release
# sync to oselvar/varar-examples deletes this whole table and pins the released
# PyPI version — the plain dependency above is all a real project needs. The
# transitive set is listed because pytest-varar pins its internal dependencies
# exactly (==<version>).
[tool.uv.sources]
pytest-varar = { path = "../../python/packages/pytest", editable = true }
varar = { path = "../../python/packages/varar", editable = true }
varar-core = { path = "../../python/packages/core", editable = true }
varar-config = { path = "../../python/packages/config", editable = true }
varar-runner = { path = "../../python/packages/runner", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/library_example", "src/roman_numerals_example", "src/yahtzee_example"]

[tool.pytest.ini_options]
addopts = "--rootdir=."
testpaths = ["."]
