[package]
name = "varar-example-rust-cargotest"
version = "0.0.1"
edition = "2024"
publish = false
description = "Standalone sample: run Markdown oaths as `cargo test` tests with Varar"

# In this monorepo the Varar crates resolve from source (path deps), so the sample
# gates trunk against the local build. A real project depends on the published
# crates instead.
[dependencies]
# The engine (steps are authored against it) and the cargo-test adapter.
varar-core = { path = "../../rust/core" }
varar-cargotest = { path = "../../rust/cargotest" }
# The ergonomic author facade (`varar::Steps`), used by the step definitions.
varar = { path = "../../rust/varar" }
# The library sample's domain type for dates.
chrono = "0.4"

[dev-dependencies]
# The `unit` test drives discovery and a single example directly.
varar-config = { path = "../../rust/config" }
varar-runner = { path = "../../rust/runner" }

[lib]
name = "example"
path = "src/lib.rs"

# The oaths run through the varar-cargotest adapter, which owns the libtest
# harness — hence `harness = false` and a `main` in tests/varar.rs.
[[test]]
name = "varar"
path = "tests/varar.rs"
harness = false

[[test]]
name = "unit"
path = "tests/unit.rs"
