[package]
name = "varar-cargotest"
version.workspace = true
edition.workspace = true
description = "Markdown-native BDD — run Markdown oaths as cargo test tests"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
varar-core.workspace = true
varar-config.workspace = true
varar-runner.workspace = true
libtest-mimic = "0.8"

[lib]
name = "varar_cargotest"
path = "src/lib.rs"
