[package]
name = "varar-config"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
serde_json = "1"

# Test-only: the conformance corpus is compared through varar-core's canonical
# JSON. The reader itself stays pure (serde_json only).
[dev-dependencies]
varar-core = { path = "../core" }

[lib]
name = "varar_config"
path = "src/lib.rs"

[[test]]
name = "conformance"
path = "tests/conformance.rs"
