[package]
name = "varar-config"
version.workspace = true
edition.workspace = true
description = "Markdown-native BDD — varar.config.json reader"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde_json = "1"

# Test-only: the conformance corpus is compared through varar-core's canonical
# JSON. The reader itself stays pure (serde_json only).
[dev-dependencies]
varar-core.workspace = true

[lib]
name = "varar_config"
path = "src/lib.rs"

[[test]]
name = "conformance"
path = "tests/conformance.rs"
