[package]
name = "varar-core"
version.workspace = true
edition.workspace = true
description = "Markdown-native BDD — pure functional core engine"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
regex = "1"
cucumber-expressions = { version = "0.5", features = ["into-regex"] }

[lib]
name = "varar_core"
path = "src/lib.rs"
