[package]
name = "varar-runner"
version.workspace = true
edition.workspace = true
description = "Markdown-native BDD — imperative shell (discovery, loading, drift)"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
varar-core.workspace = true
varar-config.workspace = true
regex = "1"

[lib]
name = "varar_runner"
path = "src/lib.rs"
