[package]
name = "varar"
version.workspace = true
edition.workspace = true
description = "Markdown-native BDD — author API (Steps: stimulus/sensor)"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
varar-core.workspace = true

[lib]
name = "varar"
path = "src/lib.rs"

[[test]]
name = "conformance"
path = "tests/conformance.rs"
